# debian_dependency_bazelizer

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  config.bzl  deb_packages.in  input.bzl  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_lock_3_8.txt  run_bazelizer.bzl
.github/workflows/: ci.yml
demo_module/: .gitignore  BUILD.bazel  MODULE.bazel  deb_packages.in
demo_module/demo/: BUILD.bazel  iproute2_demo.py
demo_module/transitive_dep_module/: BUILD.bazel  MODULE.bazel  deb_packages.in  storage_config.json
demos/: BUILD.bazel  MODULE.bazel  iproute2_demo.py
demos/dep_a/: .bazelrc  BUILD.bazel  MODULE.bazel
dependency_bazelizer/: .bazelrc  MODULE.bazel  input.bzl  requirements.in  requirements.txt  run_bazelizer.bzl
dependency_bazelizer/src/: BUILD.bazel  bazelize_deps.py  get_storage_config.py  main.py  main_module.py  modularize_package.py  package_factory.py  read_input_files.py  storage.py
dependency_bazelizer/tests/: BUILD.bazel  test_get_storage_config.py  test_main.py  test_storage.py
dependency_bazelizer/tests/ci_inputs/: deb_packages_2.in  s3_config.json  storage_config.json
dependency_bazelizer/tests/resources/: correct_input.in  correct_s3_storage_config.json  correct_storage_config.json  correct_unknown_storage_config.json  missing_bucket_storage_config.json  missing_path_unknown_storage_config.json  missing_storage_storage_config.json  missing_url_s3_config.json  missing_url_s3_storage_config.json  missing_url_storage_config.json  missing_url_unknown_storage_config.json
example/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.txt  storage_config.json  unknown_storage_config.json
example/demo/: BUILD.bazel  iproute2_demo.py
internal_modules/gcc-12-base_12.1.0-2ubuntu1~22.04_amd64/: BUILD  MODULE.bazel
internal_modules/gcc-12-base_amd64~12.1.0-2ubuntu1/: BUILD
internal_modules/libc6_2.35-0ubuntu3.1_amd64/: BUILD  MODULE.bazel
internal_modules/libc6_2.35-0ubuntu3.1_amd64/lib/x86_64-linux-gnu/: libBrokenLocale.so.1  libanl.so.1  libc.so.6  libm.so.6  libmvec.so.1  libnsl.so.1  libnss_compat.so.2  libnss_files.so.2  libnss_hesiod.so.2  libpthread.so.0  libresolv.so.2  librt.so.1
internal_modules/libc6_amd64~2.35-0ubuntu3.1/: BUILD
internal_modules/libc6_amd64~2.35-0ubuntu3.1/lib/x86_64-linux-gnu/: ld-linux-x86-64.so.2  libc_malloc_debug.so.0  libdl.so.2  libnss_dns.so.2  libthread_db.so.1  libutil.so.1
internal_modules/libgcc-s1_12.1.0-2ubuntu1~22.04_amd64/: BUILD  MODULE.bazel
internal_modules/libgcc-s1_12.1.0-2ubuntu1~22.04_amd64/lib/x86_64-linux-gnu/: libgcc_s.so.1
internal_modules/libgcc-s1_amd64~12.1.0-2ubuntu1/: BUILD
internal_modules/libgcc-s1_amd64~12.1.0-2ubuntu1/lib/x86_64-linux-gnu/: libgcc_s.so.1
internal_modules/libstdc++6_12.1.0-2ubuntu1~22.04_amd64/: BUILD  MODULE.bazel
internal_modules/libstdc++6_12.1.0-2ubuntu1~22.04_amd64/usr/lib/x86_64-linux-gnu/: libstdc++.so.6.0.30
internal_modules/libstdcplusplus6_amd64~12.1.0-2ubuntu1/: BUILD
internal_modules/libstdcplusplus6_amd64~12.1.0-2ubuntu1/usr/lib/x86_64-linux-gnu/: libstdc++.so.6.0.30
internal_modules/libstdcplusplus6_amd64~12.1.0-2ubuntu1/usr/share/gdb/auto-load/usr/lib/x86_64-linux-gnu/: libstdc++.so.6.0.30-gdb.py
internal_modules/patchelf_0.14.3-1_amd64/: BUILD
internal_modules/patchelf_0.14.3-1_amd64/usr/share/doc/patchelf/: copyright
internal_modules/patchelf_amd64~0.14.3-1/: BUILD  MODULE.bazel
internal_registry/: bazel_registry.json
internal_registry/modules/gcc-12-base_amd64/12.1.0-2ubuntu1/: MODULE.bazel  source.json  version.txt
internal_registry/modules/libc6_amd64/: metadata.json
internal_registry/modules/libc6_amd64/2.35-0ubuntu3.1/: MODULE.bazel  rpaths.txt  source.json  version.txt
internal_registry/modules/libgcc-s1_amd64/12.1.0-2ubuntu1/: MODULE.bazel  rpaths.txt  source.json
internal_registry/modules/libstdcplusplus6_amd64/: metadata.json
internal_registry/modules/libstdcplusplus6_amd64/12.1.0-2ubuntu1/: MODULE.bazel  rpaths.txt  source.json
internal_registry/modules/patchelf_amd64/0.14.3-1/: MODULE.bazel  rpaths.txt  source.json  version.txt
registry/modules/dummy_amd64/1.2.3/: rpaths.txt
src/: BUILD.bazel  bazelize_deps.py  create_deb_package.py  deb_packages.in  get_package_version.py  main.py  main_module.py  modularize_package.py  module.py  package.py  package_factory.py  read_input_file.py  read_input_files.py  registry.py  version.py  writers.py
static_registry/modules/gcc-12-base_amd64/12.3.0-1ubuntu1/: MODULE.bazel  source.json  version.txt
static_registry/modules/libc6_amd64/: metadata.json
static_registry/modules/libc6_amd64/2.35-0ubuntu3.4/: MODULE.bazel  name.txt  rpaths.json  source.json  version.txt
static_registry/modules/libgcc-s1_amd64/: metadata.json
static_registry/modules/libgcc-s1_amd64/12.3.0-1ubuntu1/: MODULE.bazel  name.txt  rpaths.json  source.json
static_registry/modules/libstdcplusplus6_amd64/12.3.0-1ubuntu1/: MODULE.bazel  name.txt  rpaths.json  source.json
static_registry/modules/patchelf_amd64/: metadata.json
static_registry/modules/patchelf_amd64/0.14.3-1/: MODULE.bazel  name.txt  rpaths.json  source.json
tests/: BUILD.bazel  test_bazelize_deps.py  test_get_package_version.py  test_main.py  test_modularize_package.py  test_module.py  test_package.py  test_read_input_file.py  test_read_input_files.py  test_storage.py  test_version.py  test_writers.py
tests/ci_inputs/: deb_packages.in  s3_config.json  storage_config.json
tests/resources/: BUILD.bazel  arm_input.in  correct_input.in  correct_s3_config.json  missing_bucket_s3_config.json  missing_bucket_s3_storage_config.json  missing_storage_s3_storage_config.json
