load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@dep_bazelizer_deps//:requirements.bzl", "requirement")

compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    extra_args = [
        "--allow-unsafe",
        "--emit-index-url",
        "--resolver=backtracking",
        "--pip-args",
        "--index-url=https://pypi.python.org/simple",
        "--upgrade",
    ],
    src = "requirements.in",
    requirements_txt = "requirements.txt",
)

py_binary(
    name = "debian_dependency_bazelizer",
    srcs = ["main.py"],
    main = "main.py",
    tags = ["local"],
    deps = [
        "//src:bazelize_deps",
        "//src:read_input_files",
        requirement("click"),
    ],
    visibility = ["//visibility:public"],
)