load("@ofiuco//python:poetry.bzl", "poetry_update")

poetry_update(
    name = "update_lock",
    lock = "poetry.lock",
    toml = "pyproject.toml",
)

py_binary(
    name = "debian_dependency_bazelizer",
    srcs = ["main.py"],
    main = "main.py",
    tags = ["local"],
    deps = [
        "//src:bazelize_deps",
        "//src:read_input_files",
        "@poetry//:click",
    ],
    visibility = ["//visibility:public"],
)