module(
    name = "dependency_bazelizer",
    version = "0.4.0",
    compatibility_level = 1,
)

bazel_dep(name = "patchelf_amd64", version = "0.14.3-1")
bazel_dep(name = "rules_python", version = "0.27.0")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    is_default = True,
    python_version = "3.10",
)


use_repo(python, "python_versions", "python_3_10")

register_toolchains(
    "@python_3_10//:all",
)
