[tool.poetry]
name = "debian-dependency-bazelizer"
version = "0"
description = "A tool to turn the debian dependency graph into bazel modules"
authors = ["Ziad Shaban <shaban_ziad@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.152"
click = "^8.1.7"
packaging = "^24.1"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
