module(
    name = "demo",
    version = "1.2.3",
    compatibility_level = 1,
)

bazel_dep(name = "demo_transitive", version = "")
local_path_override(
    module_name = "demo_transitive",
    path = "./transitive_dep_module/",
)

bazel_dep(name = "dependency_bazelizer", version = "")
local_path_override(
    module_name = "dependency_bazelizer",
    path = "../dependency_bazelizer/",
)
dependency_bazelizer = use_extension("@dependency_bazelizer//:input.bzl", "dependency_bazelizer")
dependency_bazelizer.config(deb_packages_input_file = "//:deb_packages.in", s3_config_file = "//:s3_config.json")
use_repo(dependency_bazelizer, "dep_bazelizer_config")

#bazel_dep(name="iproute2_amd64", version="5.15.0-1ubuntu2")
