load("@dependency_bazelizer//:run_bazelizer.bzl", "run_bazelizer")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

run_bazelizer()

compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)
