load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "debian_dependency_bazelizer",
    srcs = ["main.py"],
    main = "main.py",
    tags = ["local"],
    deps = [
        ":bazelize_deps",
        ":read_input_files",
        ":storage",
        "@poetry//:click",
    ],
)

py_library(
    name = "read_input_files",
    srcs = ["read_input_files.py"],
    deps = [
        ":package",
        ":version",
    ],
)

py_library(
    name = "storage",
    srcs = ["storage.py"],
    deps = [
        "@poetry//:boto3",
        # Adding the urllib3 transitive dependency of boto3 here to work around
        # https://github.com/shabanzd/debian_dependency_bazelizer/pull/65#issuecomment-2264218951
        "@poetry//:urllib3",
    ],
)

py_library(
    name = "bazelize_deps",
    srcs = ["bazelize_deps.py"],
    deps = [
        ":modularize_package",
        ":module",
        ":package",
        ":package_factory",
        ":registry",
        ":storage",
    ],
)

py_library(
    name = "package_factory",
    srcs = ["package_factory.py"],
    deps = [
        ":module",
        ":package",
        ":version",
    ],
)

py_library(
    name = "version",
    srcs = ["version.py"],
    deps = [
        ":module",
        "@poetry//:packaging",
    ],
)

py_library(
    name = "modularize_package",
    srcs = ["modularize_package.py"],
    deps = [
        ":module",
        ":package",
        ":registry",
        ":storage",
        ":writers",
    ],
)

py_library(
    name = "module",
    srcs = ["module.py"],
)

py_library(
    name = "package",
    srcs = ["package.py"],
)

py_library(
    name = "registry",
    srcs = ["registry.py"],
    deps = [
        ":module",
        ":package",
        ":version",
        ":writers",
    ],
)

py_library(
    name = "writers",
    srcs = ["writers.py"],
)

exports_files(["main.py"])
