load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@dep_bazelizer_deps//:requirements.bzl", "requirement")


package(default_visibility = ["//visibility:public"])

py_library(
    name = "read_input_files",
    srcs = ["read_input_files.py"],
    deps = [
        ":version",
        ":package",
    ],
)

py_library(
    name = "bazelize_deps",
    srcs = ["bazelize_deps.py"],
    deps = [
        ":package_factory",
        ":modularize_package",
        ":module",
        ":package",
    ],
)

py_library(
    name = "package_factory",
    srcs = ["package_factory.py"],
    deps = [
        ":version",
        ":module",
        ":package",
    ],
)

py_library(
    name = "version",
    srcs = ["version.py"],
    deps = [
        ":module",
        requirement("packaging"),
        ],
)

py_library(
    name = "modularize_package",
    srcs = ["modularize_package.py"],
    deps = [
        ":module",
        ":package",
        ":writers",
    ],
)

py_library(
    name = "module",
    srcs = ["module.py"],
)

py_library(
    name = "package",
    srcs = ["package.py"],
)

py_library(
    name = "writers",
    srcs = ["writers.py"],
)
