load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "read_input_files",
    srcs = ["read_input_files.py"],
    deps = [
        ":package",
        ":version",
    ],
)

py_library(
    name = "bazelize_deps",
    srcs = ["bazelize_deps.py"],
    deps = [
        ":modularize_package",
        ":module",
        ":package",
        ":package_factory",
    ],
)

py_library(
    name = "package_factory",
    srcs = ["package_factory.py"],
    deps = [
        ":module",
        ":package",
        ":version",
    ],
)

py_library(
    name = "version",
    srcs = ["version.py"],
    deps = [
        ":module",
        "@poetry//:packaging",
    ],
)

py_library(
    name = "modularize_package",
    srcs = ["modularize_package.py"],
    deps = [
        ":module",
        ":package",
        ":writers",
    ],
)

py_library(
    name = "module",
    srcs = ["module.py"],
)

py_library(
    name = "package",
    srcs = ["package.py"],
)

py_library(
    name = "writers",
    srcs = ["writers.py"],
)
