load("@rules_python//python:defs.bzl", "py_test")
load("@dep_bazelizer_deps//:requirements.bzl", "requirement")

py_test(
    name = "test_modularize_package",
    timeout = "short",
    srcs = ["test_modularize_package.py"],
    deps = [
        "//src:modularize_package",
        requirement("pytest"),
    ],
)

py_test(
    name = "test_version",
    timeout = "short",
    srcs = ["test_version.py"],
    deps = [
        "//src:version",
        requirement("pytest"),
        requirement("pytest_mock"),
    ],
)

py_test(
    name = "test_read_input_files",
    timeout = "short",
    srcs = ["test_read_input_files.py"],
    deps = [
        "//src:read_input_files",
        requirement("pytest"),
    ],
    data = [
        "resources/faulty_input.in",
        "resources/correct_input.in",
        "resources/arm_input.in",
    ]
)

py_test(
    name = "test_main",
    timeout = "short",
    srcs = ["test_main.py"],
    deps = [
        "//src:debian_dependency_bazelizer",
        requirement("pytest"),
        requirement("click"),
    ],
)
