load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_module",
    timeout = "short",
    srcs = ["test_module.py"],
    deps = [
        "//src:module",
        "@poetry//:pytest",
    ],
)


py_test(
    name = "test_writers",
    timeout = "short",
    srcs = ["test_writers.py"],
    deps = [
        "//src:writers",
        "//src:package",
        "//src:module",
        "@poetry//:pytest",
    ],
)

py_test(
    name = "test_bazelize_deps",
    timeout = "short",
    srcs = ["test_bazelize_deps.py"],
    deps = [
        "//src:bazelize_deps",
        "@poetry//:pytest",
    ],
)

py_test(
    name = "test_package",
    timeout = "short",
    srcs = ["test_package.py"],
    deps = [
        "//src:package",
        "@poetry//:pytest",
    ],
)

py_test(
    name = "test_modularize_package",
    timeout = "short",
    srcs = ["test_modularize_package.py"],
    deps = [
        "//src:modularize_package",
        "@poetry//:pytest",
    ],
)

py_test(
    name = "test_version",
    timeout = "short",
    srcs = ["test_version.py"],
    deps = [
        "//src:version",
        "@poetry//:pytest",
        "@poetry//:pytest-mock",
    ],
)

py_test(
    name = "test_read_input_files",
    timeout = "short",
    srcs = ["test_read_input_files.py"],
    data = [
        "resources/arm_input.in",
        "resources/correct_input.in",
        "resources/faulty_input.in",
    ],
    deps = [
        "//src:read_input_files",
        "@poetry//:pytest",
    ],
)

py_test(
    name = "test_main",
    timeout = "short",
    srcs = ["test_main.py"],
    deps = [
        "//:debian_dependency_bazelizer",
        "@poetry//:click",
        "@poetry//:pytest",
    ],
)
