module(
    name = "demo_transitive",
    version = "1.2.3",
    compatibility_level = 1,
)

bazel_dep(name = "dependency_bazelizer", version = "")
local_path_override(
    module_name = "dependency_bazelizer",
    path = "../",
)
bazelizer = use_extension("@dependency_bazelizer//:input.bzl", "bazelizer")
bazelizer.config(deb_packages_input_file = "//:deb_packages.in", storage_config_file = "//:storage_config.json")
use_repo(bazelizer, "hello")
