load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

exports_files(["main_module.py"])

py_binary(
    name = "dependency-bazelizer",
    srcs = ["main.py"],
    main = "main.py",
    tags = ["local"],
    deps = [
        ":bazelize_deps",
        ":read_input_files",
        ":storage",
        "@pip//:click_pkg",
    ],
)

py_library(
    name = "read_input_files",
    srcs = ["read_input_files.py"],
    deps = [
        ":version",
        ":package",
    ],
)

py_library(
    name = "storage",
    srcs = ["storage.py"],
    deps = ["@pip//:boto3_pkg"],
)

py_library(
    name = "bazelize_deps",
    srcs = ["bazelize_deps.py"],
    deps = [
        ":package_factory",
        ":modularize_package",
        ":storage",
        ":module",
        ":package",
        ":registry",
    ],
)

py_library(
    name = "package_factory",
    srcs = ["package_factory.py"],
    deps = [
        ":version",
        ":module",
        ":package",
    ],
)

py_library(
    name = "version",
    srcs = ["version.py"],
    deps = [
        ":module",
        "@pip//:packaging_pkg",
        ],
)

py_library(
    name = "modularize_package",
    srcs = ["modularize_package.py"],
    deps = [
        ":module",
        ":package",
        ":registry",
        ":writers",
        ":storage",
    ],
)

py_library(
    name = "module",
    srcs = ["module.py"],
)

py_library(
    name = "package",
    srcs = ["package.py"],
)

py_library(
    name = "registry",
    srcs = ["registry.py"],
    deps = [
        ":version",
        ":module",
        ":package",
        ":writers",
    ],
)

py_library(
    name = "writers",
    srcs = ["writers.py"],
)

exports_files(["main.py"])
