load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_modularize_package",
    timeout = "short",
    srcs = ["test_modularize_package.py"],
    deps = [
        "//src:modularize_package",
        "@pip//:pytest_pkg",
    ],
)

py_test(
    name = "test_version",
    timeout = "short",
    srcs = ["test_version.py"],
    deps = [
        "//src:version",
        "@pip//:pytest_pkg",
        "@pip//:pytest_mock_pkg",
    ],
)

py_test(
    name = "test_read_input_files",
    timeout = "short",
    srcs = ["test_read_input_files.py"],
    deps = [
        "//src:read_input_files",
        "@pip//:pytest_pkg",
    ],
    data = [
        "resources/faulty_input.in",
        "resources/correct_input.in",
    ]
)

py_test(
    name = "test_main",
    timeout = "short",
    srcs = ["test_main.py"],
    deps = [
        "//src:dependency-bazelizer",
        "@pip//:pytest_pkg",
        "@pip//:click_pkg",
    ],
    data = [
        "resources/storage_config.txt",
        "resources/correct_storage_config.json",
        "resources/missing_bucket_storage_config.json",
        "resources/missing_url_storage_config.json",
    ]
)
