module(
    name = "libstdcplusplus6_amd64",
    version = "12.1.0-2ubuntu1",
    compatibility_level = 17836851,
)

bazel_dep(name = "libgcc-s1_amd64", version = "12.1.0-2ubuntu1")
bazel_dep(name = "gcc-12-base_amd64", version = "12.1.0-2ubuntu1")
bazel_dep(name = "libc6_amd64", version = "2.35-0ubuntu3.1")
